small comment about 'Used Ability' messages

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       //        action: Equilibrium
       //        targetId: 10911F96
       //        targetName: Tonk Tonkers
-      //        ???: 4
+      //        this is some kind of flag ???: 4
       //        amount (hex, trailing 0s?): 6D510000
 
       /**
