--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);
       }
 
+      .toolbarItem{
+        display: inline-block;
+      }
+      .toolbarItem:not(:last-child){
+        padding-right: 8px;
+        border-right: 1px solid #f2f2f2;
+      }
+
       .itemFriendlyView{
         cursor: pointer;
         margin: -8px;
@@ -90,10 +98,18 @@
   </head>
   <body>
     <div id="toolbar">
-      <button id="pauseButton"  name="pause" onclick="updatePaused(this)" data-pause="true">Pause</button>
-      <button id="resumeButton" name="pause" onclick="updatePaused(this)" class="displayNone">Resume</button>
-      <input type="checkbox" id="logToConsoleCheckbox" name="logToConsole" checked onchange="updateLogToConsole(this)"/>
-      <label for="logToConsoleCheckbox">Log to Console</label>
+      <div class="toolbarItem">
+        <button id="pauseButton"  name="pause" onclick="updatePaused(this)" data-pause="true">Pause</button>
+        <button id="resumeButton" name="pause" onclick="updatePaused(this)" class="displayNone">Resume</button>
+      </div>
+      <div class="toolbarItem">
+        <input type="checkbox" id="logToConsoleCheckbox" name="logToConsole" checked onchange="updateLogToConsole(this)"/>
+        <label for="logToConsoleCheckbox">Log to Console</label>
+      </div>
+      <div class="toolbarItem">
+        <input type="checkbox" id="limitToCharacterCheckbox" name="limitToCharacter" onchange="updateLimitToCharacter(this)"/>
+        <label for="limitToCharacter" id="limitToCharacterLabel">Limit to {characterName}</label>
+      </div>
     </div>
     <div id="main">
     </div>
@@ -121,7 +137,7 @@
       }
 
       // Log to the console?
-      let logToConsole = true;
+      let logToConsole = document.getElementById('logToConsoleCheckbox').checked;
       /**
        * onchange handler for when the user updates the "Log to Console"
        *          checkbox
@@ -132,8 +148,21 @@
         logToConsole = e.checked;
       }
 
+      // Limit logs to current character?
+      let limitToCharacter = document.getElementById('limitToCharacterCheckbox').checked;
+      /**
+       * onchange handler for when the user updates the "Limit to {characterName}"
+       *          checkbox
+       *
+       * @param {HTMLElement} e The limitToCharacterCheckbox element
+       */
+      function updateLimitToCharacter(e){
+        limitToCharacter = e.checked;
+      }
+
       // Will be set to the name of the current character
       let characterName = null;
+      let characterId = null;
 
       // Contents vary based on messageType
       const eventType = 'LogLine';
@@ -182,11 +211,11 @@
         return {
           messageType: message.line[0],
           timestamp: new Date(message.line[1]),
-          actorId: message.line[2],
+          actorId: parseInt(message.line[2], 16),
           actorName: message.line[3],
           actionId: message.line[4],
           actionName: message.line[5],
-          targetId: message.line[6],
+          targetId: parseInt(message.line[6], 16),
           targetName: message.line[7],
           // ???: message.line[8]
           amount: decimalAmount
@@ -298,6 +327,36 @@
       const actions = [];
       const effects = [];
 
+      /**
+       * Convenience function to log messages. Checks whether or not
+       * logToConsole is set and whether or not the data is relevant.
+       */
+      function logMessage(data, actorId, targetId){
+        if(logToConsole){
+          if(isRelatedToCharacter(actorId) || isRelatedToCharacter(targetId)){
+            console.log(data);
+          }
+        }
+      }
+
+      /**
+       * If a given ID is the same as the Current Character's ID and
+       * limitToCharacter is set to true.
+       *
+       * @param {int} id The ID to check against the Current Character's ID
+       *
+       * @return {boolean} Whether or not the ID is relevant based on
+       *                   limitToCharacter
+       */
+      function isRelatedToCharacter(id){
+        if(limitToCharacter){
+          if(id !== characterId){
+            return false;
+          }
+        }
+        return true;
+      }
+
       addOverlayListener(eventType, (data) => {
         const messageType = data.line[0];
         if(messageTypes.includes(messageType)){
@@ -309,44 +368,56 @@
             switch(messageType){
               case MESSAGE_TYPE_USE_ABILITY:
                 const usedAbilityMessage = parseMessageUsedAbility(data);
-                if(logToConsole){
-                  console.log(usedAbilityMessage);
-                }
-                abilities.push(usedAbilityMessage);
-
-                appendElementToMain(
-                  createUsedAbilityElement(
-                    data
-                  )
+                logMessage(
+                  usedAbilityMessage,
+                  usedAbilityMessage.actorId,
+                  usedAbilityMessage.targetId
                 );
+                if(isRelatedToCharacter(usedAbilityMessage.actorId) || isRelatedToCharacter(usedAbilityMessage.targetId)){
+                  abilities.push(usedAbilityMessage);
+
+                  appendElementToMain(
+                    createUsedAbilityElement(
+                      data
+                    )
+                  );
+                }
 
                 break;
               case MESSAGE_TYPE_GAIN_EFFECT:
                 const gainedEffectMessage = parseMessageGainEffect(data);
-                if(logToConsole){
-                  console.log(gainedEffectMessage);
-                }
-                effects.push(gainedEffectMessage);
-
-                appendElementToMain(
-                  createGainedEffectElement(
-                    data
-                  )
+                logMessage(
+                  gainedEffectMessage,
+                  gainedEffectMessage.actorId,
+                  gainedEffectMessage.targetId
                 );
+                if(isRelatedToCharacter(gainedEffectMessage.actorId) || isRelatedToCharacter(gainedEffectMessage.targetId)){
+                  effects.push(gainedEffectMessage);
+
+                  appendElementToMain(
+                    createGainedEffectElement(
+                      data
+                    )
+                  );
+                }
 
                 break;
               case MESSAGE_TYPE_LOSE_EFFECT:
                 const lostEffectMessage = parseMessageLostEffect(data);
-                if(logToConsole){
-                  console.log(lostEffectMessage);
-                }
-                effects.push(lostEffectMessage);
-
-                appendElementToMain(
-                  createLostEffectElement(
-                    data
-                  )
+                logMessage(
+                  lostEffectMessage,
+                  lostEffectMessage.actorId,
+                  lostEffectMessage.targetId
                 );
+                if(isRelatedToCharacter(lostEffectMessage.actorId) || isRelatedToCharacter(lostEffectMessage.targetId)){
+                  effects.push(lostEffectMessage);
+
+                  appendElementToMain(
+                    createLostEffectElement(
+                      data
+                    )
+                  );
+                }
 
                 break;
             }
@@ -356,6 +427,9 @@
       // Set the player's character name so we know who they are later
       addOverlayListener('ChangePrimaryPlayer', (data) => {
         characterName = data.charName;
+        characterId = data.charID;
+        const limitToCharacterLabel = document.getElementById('limitToCharacterLabel');
+        limitToCharacterLabel.innerHTML = limitToCharacterLabel.innerHTML.replace('{characterName}', data.charName);
       });
       startOverlayEvents();
 
