--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       function updatePaused(e){
         document.getElementById('pauseButton').classList.toggle('displayNone');
         document.getElementById('resumeButton').classList.toggle('displayNone');
-        updateOption(e.dataset.pause ? true : false);
+        updateOption('paused', e.dataset.pause ? true : false);
       }
 
       // Will be set to the name of the current character
