--- a/index.html
+++ b/index.html
@@ -170,7 +170,6 @@
       let characterId = null;
 
       // Contents vary based on messageType
-      const eventType = 'LogLine';
       // 0: messageType?
       //    00: message in chat box
       //        ex: "Tonk Tonkers: hello", "There are no party members." "You change to paladin."
@@ -254,7 +253,9 @@
           actorId: message.line[5],
           actorName: message.line[6],
           targetId: message.line[7],
-          targetName: message.line[8]
+          targetName: message.line[8],
+          //???: message.line[9],
+          amount: unshiftHexAndConvert(message.line[10], 3)
         };
       }
 
@@ -310,21 +311,82 @@
         };
       }
 
+      function unshiftHexAndConvert(hexString, shiftAmount){
+        // The value is stored in hex
+        // The value is also stored somewhat big endian
+        // {4th digit}{5th digit}{6 digit}{7th digit}{???}{1st digit}{2nd digit}{3rd digit}
+        // So we want to put the last three digits before the first 4
+        // and then drop that last digit cause we don't know what it is yet
+        let rawAmount = hexString.split('');
+        for(let i = 0; i < shiftAmount; i++){
+          rawAmount.unshift(rawAmount.pop());
+        }
+        rawAmount.pop();
+        return parseInt(rawAmount.join(''), 16);
+      }
+
+      const MESSAGE_TYPE_LOG_LINE = '00'; // Log Line, literally anything
+      const MESSAGE_TYPE_CHANGE_PRIMARY_PLAYER = '02'; // ??? TODO investigate
+      const MESSAGE_TYPE_ADD_COMBATANT = '03'; // ??? TODO investigate
+      const MESSAGE_TYPE_REMOVE_COMBATANT = '04'; // ??? TODO investigate
+      const MESSAGE_TYPE_ADD_BUFF = '05'; // ??? TODO investigate
+      const MESSAGE_TYPE_REMOVE_BUFF = '06'; // ??? TODO investigate
+      const MESSAGE_TYPE_FLYING_TEXT = '07'; // ??? TODO investigate
+      const MESSAGE_TYPE_STARTS_CASTING = '20'; // Starts Casting
       const MESSAGE_TYPE_USE_ABILITY = '21'; // Character uses ability
       const MESSAGE_TYPE_GAIN_EFFECT = '26'; // Character gains effect
       const MESSAGE_TYPE_LOSE_EFFECT = '30'; // Character loses effect
+      const MESSAGE_TYPE_UNKNOWN_37 = '37'; // ??? TODO investigate
+      const MESSAGE_TYPE_UNKNOWN_38 = '38'; // ??? TODO investigate
+      const MESSAGE_TYPE_SERVER_TICK = '39'; // Server ticks? TODO investigate
+      const MESSAGE_TYPE_CHANGED_ZONE = '40'; // Changed Zone? TODO investigate
+
       // All Message Types
       const messageTypes = [
+        MESSAGE_TYPE_LOG_LINE,
+        MESSAGE_TYPE_CHANGE_PRIMARY_PLAYER, // ??? TODO investigate
+        MESSAGE_TYPE_ADD_COMBATANT, // ??? TODO investigate
+        MESSAGE_TYPE_REMOVE_COMBATANT, // ??? TODO investigate
+        MESSAGE_TYPE_ADD_BUFF, // ??? TODO investigate
+        MESSAGE_TYPE_REMOVE_BUFF, // ??? TODO investigate
+        MESSAGE_TYPE_FLYING_TEXT, // ??? TODO investigate
+        MESSAGE_TYPE_STARTS_CASTING,
         MESSAGE_TYPE_USE_ABILITY,
         MESSAGE_TYPE_GAIN_EFFECT,
-        MESSAGE_TYPE_LOSE_EFFECT
+        MESSAGE_TYPE_LOSE_EFFECT,
+        MESSAGE_TYPE_UNKNOWN_37,
+        MESSAGE_TYPE_UNKNOWN_38,
+        MESSAGE_TYPE_SERVER_TICK,
+        MESSAGE_TYPE_CHANGED_ZONE
       ];
 
       const messageTypeToFriendlyMap = {
+        [MESSAGE_TYPE_LOG_LINE]: 'Log Line',
+        [MESSAGE_TYPE_CHANGE_PRIMARY_PLAYER]: 'Primary Player Changed',
+        [MESSAGE_TYPE_ADD_COMBATANT]: 'MESSAGE_TYPE_ADD_COMBATANT',
+        [MESSAGE_TYPE_REMOVE_COMBATANT]: 'MESSAGE_TYPE_REMOVE_COMBATANT',
+        [MESSAGE_TYPE_ADD_BUFF]: 'MESSAGE_TYPE_ADD_BUFF',
+        [MESSAGE_TYPE_REMOVE_BUFF]: 'MESSAGE_TYPE_REMOVE_BUFF',
+        [MESSAGE_TYPE_FLYING_TEXT]: 'MESSAGE_TYPE_FLYING_TEXT',
+        [MESSAGE_TYPE_STARTS_CASTING]: 'Starts casting',
         [MESSAGE_TYPE_USE_ABILITY]: 'Used an ability',
         [MESSAGE_TYPE_GAIN_EFFECT]: 'Gained an effect',
         [MESSAGE_TYPE_LOSE_EFFECT]: 'Lost an effect',
+        [MESSAGE_TYPE_UNKNOWN_37]: 'MESSAGE_TYPE_UNKNOWN_37',
+        [MESSAGE_TYPE_UNKNOWN_38]: 'MESSAGE_TYPE_UNKNOWN_38',
+        [MESSAGE_TYPE_UNKNOWN_38]: 'MESSAGE_TYPE_UNKNOWN_38',
+        [MESSAGE_TYPE_SERVER_TICK]: 'Server tick?',
+        [MESSAGE_TYPE_CHANGED_ZONE]: 'Changed zone?'
       };
+
+      // Used to ignore message types so they don't get console logged or
+      // displayed
+      const messageTypeBlackList = [
+        MESSAGE_TYPE_LOG_LINE,
+        MESSAGE_TYPE_ADD_COMBATANT,
+        MESSAGE_TYPE_REMOVE_COMBATANT,
+        MESSAGE_TYPE_SERVER_TICK
+      ];
 
       const abilities = [];
       const actors = [];
@@ -369,11 +431,11 @@
         return true;
       }
 
-      addOverlayListener(eventType, (data) => {
+      addOverlayListener('LogLine', (data) => {
         const messageType = data.line[0];
-        if(messageTypes.includes(messageType)){
-          if(!options.paused){
-            if(options.logToConsole && options.logRawData){
+        if(!options.paused){
+          if(messageTypes.includes(messageType)){
+            if(options.logToConsole && options.logRawData && !messageTypeBlackList.includes(messageType)){
               console.log(
                 messageTypeToFriendlyMap[messageType] ? messageTypeToFriendlyMap[messageType] : 'Unknown message type',
                 data
@@ -434,6 +496,14 @@
                 }
 
                 break;
+            }
+          }
+          else{
+            if(options.logToConsole && options.logRawData && !messageTypeBlackList.includes(messageType)){
+              console.log(
+                'Unknown message type',
+                data
+              );
             }
           }
         }
@@ -735,13 +805,23 @@
 
         // Actor applying the effect to the target
         const friendlyActorElement = document.createElement('span');
-        let friendlyText = `
-          <b>${effectMessage.actorName}</b>
-          applied
-          <b>${effectMessage.actionName}</b>
-          to
-          <b>${effectMessage.targetName}</b>
-        `;
+        let friendlyText = '';
+        if(effectMessage.actorName){
+          friendlyText =`
+            <b>${effectMessage.actorName}</b>
+            applied
+            <b>${effectMessage.actionName}</b>
+            to
+            <b>${effectMessage.targetName}</b>
+          `;
+        }
+        else{
+          friendlyText =`
+            <b>${effectMessage.targetName}</b>
+            gained
+            <b>${effectMessage.actionName}</b>
+          `;
+        }
         friendlyActorElement.innerHTML = friendlyText;
         friendlyViewElement.appendChild(friendlyActorElement);
 
@@ -821,6 +901,14 @@
         return detailsTable;
       }
 
+      /**
+       * Create a "Lost an Effect" element to display the "Lost an Effect" log
+       * lines
+       *
+       * @param {object} rawData The raw, unparsed, lost an effect object
+       *
+       * @return {HTMLObject} The newly created element
+       */
       function createLostEffectElement(rawData){
         const effectMessage = parseMessageLostEffect(rawData);
         // Container for the Gained Effect messages
@@ -846,6 +934,7 @@
           removed
           <b>${effectMessage.actionName}</b>
           from
+          <b>${effectMessage.targetName}</b>
         `;
         friendlyActorElement.innerHTML = friendlyText;
         friendlyViewElement.appendChild(friendlyActorElement);
